k8s/cluster/kong/http-routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kong-admin-route
  namespace: kong
  annotations:
    konghq.com/strip-path: "false"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Kong Admin API
    gethomepage.dev/description: Gateway control plane
    gethomepage.dev/group: Cluster
    gethomepage.dev/icon: kong.png
spec:
  parentRefs:
    - name: kong-gw-01
      namespace: kong
  hostnames:
    - kong-admin.k.4esnok.su
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kong-gw-01-kong-admin
          port: 8001
          # Note: Port 8444 for TLS is also available if tls.enabled is true

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kong-manager-route
  namespace: kong
  annotations:
    konghq.com/strip-path: "false"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Kong Manager
    gethomepage.dev/description: Gateway UI
    gethomepage.dev/group: Cluster
    gethomepage.dev/icon: kong.png
spec:
  parentRefs:
    - name: kong-gw-01
      namespace: kong
  hostnames:
    - kong.k.4esnok.su
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kong-gw-01-kong-manager
          port: 8002
