k8s/cluster/kong/manager-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kong-manager-route
  namespace: kong
spec:
  parentRefs:
  - name: kong
    namespace: kong
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /manager
    - path:
        type: PathPrefix
        value: /assets
    backendRefs:
    - name: kong-kong-manager
      port: 8002
